# blocky-rs

./: Cargo.toml  README.md
blocky/: Cargo.toml
blocky-core/: Cargo.toml
blocky-core/src/: chat_formatting.rs  lib.rs  resource_location.rs
blocky-nbt/: Cargo.toml
blocky-nbt/src/: decoder.rs
blocky-nbt/src/tag/: kind.rs  mod.rs
blocky-nbt/src/tag/parser/: mod.rs
blocky-net/: Cargo.toml
blocky-net/src/: lib.rs
blocky-net/src/chat/: click_event.rs  component.rs  mod.rs  style.rs  text_color.rs  text_component.rs  translatable_component.rs
blocky-net/src/protocol/: mod.rs
blocky/src/: chat_formatting.rs  lib.rs  main.rs  resource_location.rs
nbt/: Cargo.toml
nbt/examples/: compressed.nbt  uncompressed.nbt
nbt/src/: decoder.rs  encoder.rs  lib.rs
nbt/src/tag/: index.rs  mod.rs
nbt/src/tag/parser/: mod.rs  reader.rs
