[package]
name = "blocky"
version = "0.1.2"
authors = ["Jaden Buchan <me@jaden.bio>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/blocky-rs"
documentation = "https://docs.rs/blocky/0.1.1"
description = """
This crate is designed to be a placeholder for now.
"""

[[bin]]
name = "main"
doc = false
path = "./src/main.rs"

[dependencies]
blocky-core = { version = "0.1.0", path = "../blocky-core" }
blocky-nbt = { version = "0.1.0", path = "../blocky-nbt" }
blocky-net = { version = "0.1.0", path = "../blocky-net" }
serde_json = "1.0"
clap = "2.33"
java-props = "0.1"